compiler/weave_syntax/tests/data/syntax/statements/a0001.error
error: Unexpected tokens
        --> <source>:1:8
         |
       1 | public break
         |        ^^^^^
